Lots of changes
Break up the classes into different files. Create a class that validates
the AST to provide compile time messages. Add sourcecode ranges for
several expressions.